fix vertical alignment issue

--- a/src/app/timer-display/timer-display.component.css
+++ b/src/app/timer-display/timer-display.component.css
@@ -1,6 +1,9 @@
 :host {
   width: 50%;
   min-height: 30%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   margin: 4rem;
 }
 
